profilelist1exp/unpackaged/objects/Partner_Request__c.object
<CustomObject>
    <fields>
        <fullName>Job_Function_Role__c</fullName>
        <description>Job Function Role corresponds to Job Title in Partner Registration</description>
        <inlineHelpText>Job Function Role corresponds to Job Title in Partner Registration</inlineHelpText>
        <label>Job Function Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CISO</fullName>
                </value>
                <value>
                    <fullName>CMO</fullName>
                </value>
                <value>
                    <fullName>Contracting Officer</fullName>
                </value>
                <value>
                    <fullName>Contracts Administration</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>CTO</fullName>
                </value>
                <value>
                    <fullName>Database Manager</fullName>
                </value>
                <value>
                    <fullName>Director - Finance</fullName>
                </value>
                <value>
                    <fullName>Director - IT</fullName>
                </value>
                <value>
                    <fullName>Director - Marketing</fullName>
                </value>
                <value>
                    <fullName>Director - Procurement</fullName>
                </value>
                <value>
                    <fullName>Director - Sales</fullName>
                </value>
                <value>
                    <fullName>Engineering Manager</fullName>
                </value>
                <value>
                    <fullName>Facilities Manager</fullName>
                </value>
                <value>
                    <fullName>Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Financial Analyst</fullName>
                </value>
                <value>
                    <fullName>Financial Controller</fullName>
                </value>
                <value>
                    <fullName>HR Generalist</fullName>
                </value>
                <value>
                    <fullName>HR Manager</fullName>
                </value>
                <value>
                    <fullName>IT Consultant</fullName>
                </value>
                <value>
                    <fullName>IT Manager</fullName>
                </value>
                <value>
                    <fullName>LAN/WAN Manager</fullName>
                </value>
                <value>
                    <fullName>Logistics Support</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Operations Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <inlineHelpText>Job Function corresponds to Job Category in Partner Registration</inlineHelpText>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Executives</fullName>
                </value>
                <value>
                    <fullName>Facilities</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>H/R</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Job Title CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Title_Non_GC__c</fullName>
        <label>Job Title</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Job_Category_Non_GC__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CISO</fullName>
                </value>
                <value>
                    <fullName>CMO</fullName>
                </value>
                <value>
                    <fullName>Contracting Officer</fullName>
                </value>
                <value>
                    <fullName>Contracts Administration</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>CTO</fullName>
                </value>
                <value>
                    <fullName>Database Manager</fullName>
                </value>
                <value>
                    <fullName>Director - Finance</fullName>
                </value>
                <value>
                    <fullName>Director - IT</fullName>
                </value>
                <value>
                    <fullName>Director - Marketing</fullName>
                </value>
                <value>
                    <fullName>Director - Procurement</fullName>
                </value>
                <value>
                    <fullName>Director - Sales</fullName>
                </value>
                <value>
                    <fullName>Engineering Manager</fullName>
                </value>
                <value>
                    <fullName>Facilities Manager</fullName>
                </value>
                <value>
                    <fullName>Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Financial Analyst</fullName>
                </value>
                <value>
                    <fullName>Financial Controller</fullName>
                </value>
                <value>
                    <fullName>HR Generalist</fullName>
                </value>
                <value>
                    <fullName>HR Manager</fullName>
                </value>
                <value>
                    <fullName>IT Consultant</fullName>
                </value>
                <value>
                    <fullName>IT Manager</fullName>
                </value>
                <value>
                    <fullName>LAN/WAN Manager</fullName>
                </value>
                <value>
                    <fullName>Logistics Support</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Operations Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Job Title</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Job_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Analyst</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>CISO</fullName>
                </value>
                <value>
                    <fullName>CMO</fullName>
                </value>
                <value>
                    <fullName>Contracting Officer</fullName>
                </value>
                <value>
                    <fullName>Contracts Administration</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>CTO</fullName>
                </value>
                <value>
                    <fullName>Database Manager</fullName>
                </value>
                <value>
                    <fullName>Director - Finance</fullName>
                </value>
                <value>
                    <fullName>Director - IT</fullName>
                </value>
                <value>
                    <fullName>Director - Marketing</fullName>
                </value>
                <value>
                    <fullName>Director - Procurement</fullName>
                </value>
                <value>
                    <fullName>Director - Sales</fullName>
                </value>
                <value>
                    <fullName>Engineering Manager</fullName>
                </value>
                <value>
                    <fullName>Facilities Manager</fullName>
                </value>
                <value>
                    <fullName>Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Financial Analyst</fullName>
                </value>
                <value>
                    <fullName>Financial Controller</fullName>
                </value>
                <value>
                    <fullName>HR Generalist</fullName>
                </value>
                <value>
                    <fullName>HR Manager</fullName>
                </value>
                <value>
                    <fullName>IT Consultant</fullName>
                </value>
                <value>
                    <fullName>IT Manager</fullName>
                </value>
                <value>
                    <fullName>LAN/WAN Manager</fullName>
                </value>
                <value>
                    <fullName>Logistics Support</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Operations Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Join_Dell_PartnerDirect_Program__c</fullName>
        <label>Join Dell PartnerDirect Program</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EMC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Large_Enterprise__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Large Enterprise</description>
        <inlineHelpText>We are a large national or international firm with many branch locations.</inlineHelpText>
        <label>Large Enterprise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Last Name CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Partner Requests</relationshipLabel>
        <relationshipName>R00N70000002MeZWEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_representative_Proxy_Holder_Email__c</fullName>
        <label>Legal representative/Proxy Holder Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Legal_representative_Proxy_Holder_Name__c</fullName>
        <label>Legal representative/Proxy Holder Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_To_Account_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Link To Account Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link_to_Account_Record_Is_Complete_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Link to Account Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Linkage_Global_Ultimate_Company_Name__c</fullName>
        <description>D&amp;B Validated Corporate linkage</description>
        <label>Linkage - Global Ultimate Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkage_Global_Ultimate_Country__c</fullName>
        <description>D&amp;B Validated Corporate linkage</description>
        <label>Linkage - Global Ultimate Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkage_Global_Ultimate_DUNS__c</fullName>
        <description>D&amp;B Validated Corporate linkage</description>
        <label>Linkage - Global Ultimate DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkage_HQ_Company_Name__c</fullName>
        <description>D&amp;B Validated Corporate linkage</description>
        <label>Linkage - HQ Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkage_HQ_Country__c</fullName>
        <description>D&amp;B Validated Corporate linkage</description>
        <label>Linkage - HQ Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkage_HQ_DUNS__c</fullName>
        <description>D&amp;B Validated Corporate linkage</description>
        <label>Linkage - HQ DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkage_Parent_Company_Name__c</fullName>
        <description>D&amp;B Validated Corporate linkage</description>
        <label>Linkage - Parent Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkage_Parent_Country__c</fullName>
        <description>D&amp;B Validated Corporate linkage</description>
        <label>Linkage - Parent Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Linkage_Parent_DUNS__c</fullName>
        <description>D&amp;B Validated Corporate linkage</description>
        <label>Linkage - Parent DUNS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedInProfile__c</fullName>
        <label>LinkedInProfile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location_Of_User__c</fullName>
        <label>Location Of User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUP_Profile_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>mupProfileIsCompleteFlagTask</description>
        <label>Update MUP Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Managed_Deployment__c</fullName>
        <description>Please indicate how you deliver the following services to your customers</description>
        <label>Managed Deployment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deliver</fullName>
                </value>
                <value>
                    <fullName>Resell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managed_Service_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Managed Service Provider</description>
        <inlineHelpText>We focus on services to our customers.</inlineHelpText>
        <label>Service Provider (MSP)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marked_As_Incomplete_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF - Y- PRM Incomplete Partner Registration Re-submitted Notification/ APP/ FU / OM - N ||Emailalert-Y-PRM Incomplete Partner Registration Re-submitted Notification
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Marked As Incomplete User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000002MeXlEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_Email__c</fullName>
        <label>Marketing Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_Name__c</fullName>
        <label>Marketing Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_Telephone__c</fullName>
        <label>Marketing Contact Telephone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Contact_Title__c</fullName>
        <label>Marketing Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_Account__c</fullName>
        <label>Matching Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Mobile CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mode_Of_Service__c</fullName>
        <description>Do you provide services? From Partner Registration form</description>
        <label>Mode of Service</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Remote</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NA_Agreement_Hard_copy_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A: Agreement Hard-copy Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Check_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A: Check Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Check_Denied_Party_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A: Check Denied Party List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Check_Export_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A: Check Export Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Enable_Order_Management_access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A: Enable Order Management access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Enable_Premier_Pages_access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A: Enable Premier Pages access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Send_Welcome_Packet_to_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N/A: Send Welcome Packet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_LGBT_Chamber_of_Commerce__c</fullName>
        <defaultValue>false</defaultValue>
        <description>National LGBT Chamber of Commerce</description>
        <label>National LGBT Chamber of Commerce</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Minority_Development_Council__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Minority Development Council</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Veteran_Business_Devel_Council__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Veteran Business Devel Council</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_Opt_In_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Newsletter Opt In CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newsletter_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Newsletter Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Employees CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberOfEmployees__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Branches_Subsidiaries__c</fullName>
        <description>Number of Branches Subsidiaries</description>
        <label>Number of Branches/Subsidiaries</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_years_in_business_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Number of years in business CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_years_in_business__c</fullName>
        <label>Number of years in business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 year</fullName>
                </value>
                <value>
                    <fullName>1-3 years</fullName>
                </value>
                <value>
                    <fullName>4-5 years</fullName>
                </value>
                <value>
                    <fullName>6-10 years</fullName>
                </value>
                <value>
                    <fullName>More than 10 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>OEM</description>
        <inlineHelpText>Original Equipment Manufacturer. We manufacture products or components that are purchased by another company and retailed under that purchasing company&apos;s name.</inlineHelpText>
        <label>OEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSC_Create_Order__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Allows Direct Partners to Order Non-Specialty Solutions in Solutions Configurator (Purchase Path)</inlineHelpText>
        <label>Solutions Configurator Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSC_Create_Quote__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Allows Direct Partners to Quote Non-Specialty Solutions in Solutions Configurator (Purchase Path)</inlineHelpText>
        <label>Solutions Configurator Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSC_Specialty_Product_Create_Order__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Allows Direct Partners to Order Specialty Solutions in Solutions Configurator (Specialty Product Purchase Path)</inlineHelpText>
        <label>Solutions Configurator Order Specialty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSC_Specialty_Product_Create_Quote__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Allows Direct Partners to Quote Specialty Solutions in Solutions Configurator (Specialty Product Purchase Path)</inlineHelpText>
        <label>Solutions Configurator Quote Specialty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <label>OpportunityID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Address_1_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization Address 1 CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Address_1__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Address_2_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization Address 2 CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Address_2__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Address_3_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization Address 3 CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Address_3__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization Address 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Annual_Revenue_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization Annual Revenue CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Annual_Revenue__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Annual Revenue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$0 - $50,000 USD</fullName>
                </value>
                <value>
                    <fullName>$51,000 - $150,000 USD</fullName>
                </value>
                <value>
                    <fullName>$151,000 - $250,000 USD</fullName>
                </value>
                <value>
                    <fullName>$251,000 - $500,000 USD</fullName>
                </value>
                <value>
                    <fullName>$501,000 - $1 Million USD</fullName>
                </value>
                <value>
                    <fullName>$1 Million - $2.5 Million USD</fullName>
                </value>
                <value>
                    <fullName>$2.5 Million - $5 Million USD</fullName>
                </value>
                <value>
                    <fullName>$5 Million - $10 Million USD</fullName>
                </value>
                <value>
                    <fullName>$10 Million + USD</fullName>
                </value>
                <value>
                    <fullName>Unable to provide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Org_City_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization City CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_City__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Country_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization Country CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Partner Requests (Organization Country)</relationshipLabel>
        <relationshipName>R00N70000002MeaAEAS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Org_Fax_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization Fax CF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Fax__c</fullName>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Org_Phone_CF__c</fullName>
        <defaultValue>false</defaultValue>
        <description>INTEG-N / NON INTEG - Y / APEX/CC - N||
WF / APP/ FU / OM - N ||
Desc -||
SFA -Y/PRM-Y||
VAL -  N||
CR# -R10.2 # 816  ||</description>
        <label>Organization Phone CF</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>